# nexus-api

./: .gitignore  Cargo.toml
src/: auth.rs  error.rs  extractors.rs  logger.rs  main.rs  state.rs
src/entity/: bans.rs  comments.rs  communities.rs  cross_posts.rs  follows.rs  links.rs  logs.rs  mod.rs  password_history.rs  posts.rs  refresh_tokens.rs  subscriptions.rs  users.rs  votes.rs
src/handlers/: mod.rs
src/handlers/comments/: mutation.rs
src/handlers/communities/: mutation.rs  query.rs  routes.rs
src/handlers/logs/: query.rs  routes.rs
src/handlers/posts/: mod.rs  mutation.rs  query.rs  routes.rs
src/handlers/search/: query.rs  routes.rs
src/handlers/template_handler/: query.rs
src/handlers/users/: mutation.rs  query.rs  routes.rs
