[package]
name = "nexus-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-json", "with-uuid", "with-time" ] }
serde = "1.0.228"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
