[package]
name = "nexus-api"
publish = false
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
dotenvy = "0.15.7"
serde = "1.0.228"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dependencies.sea-orm]
features = [
    "entity-registry",
    "runtime-tokio",
    "schema-sync",
    "sqlx-postgres",
    "macros",
    "mock",
    "rbac",
    "with-chrono",
    "with-time",
    "with-json",
    "with-uuid",
    "postgres-vector",
    "postgres-array"
]
version = "2.0.0-rc.37"
