[package]
name = "nexus-api"
publish = false
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5.3"
chrono = "0.4.44"
axum-extra = { version = "0.12.5", features = ["typed-header", "cookie"] }
base64 = "0.22.1"
time = "0.3.47"

[dependencies.sea-orm]
features = [
    "entity-registry",
    "runtime-tokio",
    "schema-sync",
    "sqlx-postgres",
    "macros",
    "mock",
    "rbac",
    "with-chrono",
    "with-time",
    "with-json",
    "with-uuid",
    "postgres-vector",
    "postgres-array"
]
version = "2.0.0-rc.37"

[dependencies.uuid]
version = "1.22.0"
features = ["v4"]
